<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_margin="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Tambah_Barang">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nama_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_barang"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/harga_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/harga_barang"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jenis_barang"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jenis_barang" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/jumlah_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah_barang"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/qr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barcode_atau_qr_code"
            android:layout_toStartOf="@id/img_qr" />
        <ImageView
            android:id="@+id/img_qr"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_qr"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal"
            android:layout_toStartOf="@id/img_tanggal" />
        <ImageView
            android:id="@+id/img_tanggal"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Button
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/simpan"
        android:text="@string/simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>