<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Stok_Masuk">

    <TextView
        android:id="@+id/nilai_awal"
        android:text="0"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_barang"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/jumlah_barang"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

<!--    <Button-->
<!--        android:id="@+id/minus"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/ic_minus"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        />-->

<!--    <Button-->
<!--        android:id="@+id/plus"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/ic_add"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        />-->

</LinearLayout>


    <Button
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/simpan"
        android:text="@string/simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</LinearLayout>