<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Detail_Barang">

    <TableLayout
        android:background="#22ff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:text="Nama Barang"
                android:padding="3dip" />
            <EditText
                android:padding="3dip"
                android:id="@+id/nama_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_column="1"
                android:text="Harga Barang"
                android:padding="3dip" />
            <EditText
                android:padding="3dip"
                android:id="@+id/harga_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </TableRow>

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_column="1"
                android:text="Jenis Barang"
                android:padding="3dip" />
            <EditText
                android:padding="3dip"
                android:id="@+id/jenis_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />
        </TableRow>

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_column="1"
                android:text="Jumlah Barang"
                android:padding="3dip" />
            <EditText
                android:padding="3dip"
                android:id="@+id/jumlah_barang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_column="1"
                android:text="@string/tanggal"
                android:padding="3dip" />
            <TextView
                android:padding="3dip"
                android:id="@+id/tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal"
                />
        </TableRow>

        <TableRow
            android:layout_margin="5dp">
            <TextView
                android:layout_column="1"
                android:text="@string/barcode_atau_qr_code"
                android:padding="3dip" />
            <TextView
                android:padding="3dip"
                android:id="@+id/barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode_atau_qr_code"

                />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/kembali"
        android:text="@string/kembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update"
        android:text="@string/update"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

</LinearLayout>